--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ali-zaidi-arrivy/react-bootstrap-date-picker": "^5.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "create-react-class": "^15.6.3",
+    "multiselect-react-dropdown": "^1.6.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-bootstrap-multiselect": "^2.4.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-multiselect-dropdown-bootstrap": "^1.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
