--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-multiselect": "^2.4.1",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-multiselect-dropdown-bootstrap": "^1.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
