--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "create-react-class": "^15.6.3",
     "multiselect-react-dropdown": "^1.6.1",
     "popper.js": "^1.16.1",
+    "qs": "^6.9.4",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-date-picker": "^5.1.0",
